feat (account, transfer) update account finished & create transfer endpoint created
