# docs/swagger.json
@@ -31,6 +31,29 @@
                     }
                 }
             },
+            "put": {
+                "description": "Update an account",
+                "tags": [
+                    "account"
+                ],
+                "summary": "Account",
+                "parameters": [
+                    {
+                        "description": "Update Account Data",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.UpdateAccountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
             "post": {
                 "description": "Create an account",
                 "tags": [
@@ -68,14 +91,6 @@
                         "description": "Account ID",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -231,6 +246,26 @@
                 },
                 "to_account": {
                     "type": "integer"
+                }
+            }
+        },
+        "types.UpdateAccountRequest": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "balance": {
+                    "type": "integer"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
                 }
             }
         }
