# internal/app/types/auth.go
@@ -22,10 +22,18 @@ type Account struct {
 	Number            int64     `json:"number"`
 	Balance           int64     `json:"balance"`
 	CreatedAt         time.Time `json:"created_at"`
+	UpdatedAt         time.Time `json:"updated_at"`
 }
 
 type CreateAccountRequest struct {
 	FirstName string `json:"first_name" validate:"required,min=3,max=100"`
 	LastName  string `json:"last_name" validate:"required,min=3,max=100"`
 	Password  string `json:"password" validate:"required,min=8"`
+}
+
+type UpdateAccountRequest struct {
+	ID        int    `json:"id" validate:"required"`
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+	Balance   int64  `json:"balance"`
 }
